Changes
=======

1.3.1 (TBD)
-----------

Bug fixes:

- N-D arrays are once again accepted by sampling.sample_gen (#2515).

1.3.0.post1 (2022-08-09)
------------------------

This version corrects errors made in building binary wheels for 1.3.0. There
are no bug fixes or new features in this version.

1.3.0 (2022-07-05)
------------------

Bug fixes:

- Temporarily restore rasterio.parse_path (wrapper with a warning).
- In 1.3b3, rasterio.dtypes.uint64 mapped to 'uint32'. Now it correctly maps to
  'uint64' (reported in #2502).

1.3b3 (2022-06-27)
------------------

Bug fixes:

- A bottleneck in construction of non-EPSG CRS objects has been fixed (#2488).
- The last runtime checks for GDAL version 3.1+ have been removed (#2463).

1.3b2 (2022-06-22)
------------------

Changes:

- The merge tool has new "sum" and "count" merge methods (#2457).

Bug fixes:

- Some GDAL methods may set a failure level error while also succeeding,
  according to their return value. We now ensure that callers of these methods
  can clear any leftover errors (#2487).

Linux and macOS wheels for 1.3b1 are built using the version of rasterio-wheels
dated 2022-06-21.

1.3b1 (2022-05-10)
------------------

New features:

- A dataset's write method now accepts Numpy masked arrays and has a "masked"
  keyword argument. In this case, if masked is False, the masked array's filled
  method is called with the dataset's nodata value or else the masked array's
  fill value. If the masked argument is True, the dataset's write_mask method
  is called.

Changes:

- Various decorators requiring a GDAL version of 2+ have been deleted. Rasterio
  now absolutely requires GDAL 3.1+ (#2452).

Packaging:

Wheels for 1.3b1 are built using the version of rasterio-wheels dated
2022-05-10.

1.3a4 (2022-04-20)
------------------

Deprecations:

- The precision keyword arguments of methods in rasterio.transform,
  rasterio.windows, and rasterio.merge are unused and will be removed in